<resources>
    <string name="app_name">ZooDeLille</string>

    <!-- NAVIGATION BOTTOM -->
    <string name="icon_home">Accueil</string>
    <string name="icon_routes">Parcours</string>
    <string name="icon_animals">Animaux</string>
    <string name="icon_map">Plan</string>
    <string name="icon_quizzes">Quiz</string>
    <string name="icon_qrcode">QR Code</string>

    <!-- FRAGMENT HOME -->
    <string name="bienvenue_au_zoo_de_lille">Bienvenue au Zoo de Lille</string>
    <string name="button_home_go_courses">Cliquez ici pour accéder à vos parcours</string>
    <string name="textview_home_courses">Pas de parcours en cours</string>
    <string name="date_bienvenue">Jour Mois Année - Ouvert / fermé + horaire</string>

    <!-- INFORMATION -->
    <string name="back_home">Retour à la page d\'accueil</string>
    <string name="prices_adultes_gratuit">Entrée gratuite pour les adultes habitants à Lille</string>
    <string name="pass_zoo">Les habitants de Lille, Lomme ou Hellemmes doivent se procurer un « Pass zoo » (délai de quelques jours à prévoir !) avant la visite pour profiter de l’entrée gratuite.</string>
    <string name="prices_adultes_payant">Entrée adulte au prix de 4 euros (tarif de 2020)</string>
    <string name="prices_enfants_payant">Entrée enfant entre 5 à 17 ans inclus à 2 euros (tarif de 2020).</string>
    <string name="prices_enfants_gratuit">Entrée gratuite pour les habitants de Lille.</string>
    <string name="more_info">Voir les informations du zoo</string>
    <string name="wallpaper_home">Random animal picture</string>

    <!-- CARD VIEW ROUTE -->
    <string name="route_name">Route name</string>
    <string name="set_fav_route">Set if route is favorite or not</string>
    <string name="text_route_distance">Distance du parcours : %1$d</string>
    <string name="text_route_time">Durée estimée du parcours : %1$d</string>
    <!-- CARD VIEW ANIMAL -->
    <string name="animal_picture">Animal picture</string>
    <string name="animal_name">Animal name</string>
    <string name="set_fav_animal">Set if animal is favorite or not</string>
    <!-- CARD VIEW QUIZ -->
    <string name="quiz_name">Quiz name</string>
    <string name="quiz_level">Level</string>
    <string name="quiz_best_score">Best score</string>
    <string name="quizzes_play">Play a quiz</string>
    <string name="set_fav_quiz">Set if quiz is favorite or not</string>

    <!-- FRAGMENT ROUTES -->
    <string name="no_route">Pas de parcours en cours.</string>
    <string name="routes">Parcours</string>
    <string name="pause">Pause</string>
    <string name="button_to_play">Button to play</string>
    <!-- FRAGMENT ANIMALS -->
    <string name="animals">Les animaux du zoo</string>
    <!-- FRAGMENT QUIZZES -->
    <string name="quizzes">Amusez-vous avec nos quizzes</string>

    <!-- FILTER -->
    <string name="filter_button">Filter button</string>
    <string name="text_filter_alpha">A - Z</string>
    <string name="text_filter_make">Affichez vos quizzes déjà fait</string>
    <string name="text_filter_level">Niveau</string>
    <string name="text_filter_favori">Affichez vos favoris</string>
    <string name="text_filter_alim">Régime alimentaire</string>
    <string name="text_filter_distance">Distance</string>
    <string name="text_filter_time">Durée estimée</string>

    <!-- ANIMAL -->
    <string name="description">Description :</string>
    <string name="menaced">Menaces :</string>
    <string name="classification">Classification :</string>
    <string name="nom_latin">Nom latin :</string>
    <string name="zone_geo">Zone geo</string>
    <string name="do_you_know">Le saviez-vous ?</string>

    <!-- INFO -->
    <string name="hour_week_summer">En semaine du Lundi au Vendredi de %1$d h à %2$d h</string>
    <string name="hour_week_winter">Tous les jours de %1$d h à %2$d h</string>
    <string name="hour_weekend">En Week-End du Lundi au Vendredi de %1$d h à %2$d h</string>
    <string name="hour_close_day">Fermé le %1$s</string>
    <string name="exceptional_opening">Ouvert exceptionnellement le(s) %1$s</string>
    <string name="closure">Fermé du %1$s au %2$s</string>

    <!-- OTHERS -->
    <string name="back">Retour</string>
    <string name="itineraire">Itinéraire</string>
    <string name="facebook">Facebook</string>
    <string name="actu_work">Actualité en préparation</string>
    <string name="a_z">A-Z</string>
    <string name="gradiant">gradiant</string>
    <string name="display_shape">Display shape</string>
    <string name="wait_pict_screen">Waiting picture\'s screen</string>
    <string name="nos_soigneurs_s_occupent_de_vous">Nos soigneurs s\'occupent de vous</string>
</resources>