<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/drawable_home"
        android:title="@string/icon_home"/>
    <item
        android:id="@+id/nav_routes"
        android:icon="@drawable/drawable_routes"
        android:title="@string/icon_routes"/>
    <item
        android:id="@+id/nav_animals"
        android:icon="@drawable/drawable_animals"
        android:title="@string/icon_animals"/>
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/drawable_map"
        android:title="@string/icon_map"/>
    <item
        android:id="@+id/nav_quizzes"
        android:icon="@drawable/drawable_quiz"
        android:title="@string/icon_quizzes"/>
    <!--<item
        android:id="@+id/nav_qrcode"
        android:icon="@drawable/drawable_qrcode"
        android:title="@string/icon_qrcode"/>-->
</menu>